# smooth_n_control

./: CMakeLists.txt  README.md  package.xml
action/: MoveBot.action
include/smooth_n_control/: CSpline.hpp  MoveBotServer.hpp  PathMarkerPublisher.hpp  PathSampler.hpp  PathSegment.hpp  SmoothPathServer.hpp  TrajectMarkerPublish.hpp  TrajectoryClient.hpp  TrajectoryServer.hpp
launch/: controller.launch.py  create_trajectory.launch.py  display.launch.py  nav_bringup.launch.py  server.launch.py
msg/: Path.msg  Pose2d.msg
pathFiles/: path1.txt
rviz/: rviz.rviz  rviz_config.rviz
src/: CSpline.cpp  EmptyMap.cpp  MoveBotClient.cpp  MoveBotServer.cpp  NewController.cpp  PathMarkerPublisher.cpp  PathSampler.cpp  PathSegment.cpp  PathSmoothing.cpp  SmoothPathServer.cpp  TrajectMarkerPublish.cpp  TrajectoryClient.cpp  TrajectoryServer.cpp
srv/: CreateTrajectory.srv  SmoothPath.srv
